[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/entities/game_objects/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/images/CardBack.png" type="Texture" id=2]

[node name="Card" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Border" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 260.0
color = Color( 0.00392157, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FaceColour" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 100, 130 )
scale = Vector2( 0.9, 0.857143 )
texture = ExtResource( 2 )

[node name="FaceSprite" type="Sprite" parent="."]
position = Vector2( 100, 130 )
scale = Vector2( 0.9, 0.857143 )
